еще немного изменений

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,319 +7,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".MainActivity">
 
-    <!--    <include -->
-    <!--        layout="@layout/text_view" />-->
-    <!--    -->
-    <!--    <include-->
-    <!--        layout="@layout/text_view2" />-->
-    <!--    -->
-    <!--    <include-->
-    <!--        layout="@layout/buttons_layout"/>-->
+        <include
+            layout="@layout/text_view" />
 
-    <TextView
-        android:id="@+id/solutionText"
-        android:textSize="20pt"
-        android:textColor="@color/black"
-        android:background="@color/primary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:padding="10pt"
-        android:layout_margin="10dp"
-        android:gravity="right|bottom"
-        android:layout_weight="4"
-        android:text="" />
+        <include
+            layout="@layout/text_view2" />
 
-    <TextView
-        android:id="@+id/editText"
-        android:textSize="40pt"
-        android:textColor="@color/black"
-        android:background="@color/primary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_margin="10dp"
-        android:gravity="right|center"
-        android:layout_weight="1"
-        android:text="0" />
-
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_margin="10dp"
-        android:layout_height="wrap_content">
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="2dp">
-
-
-    <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonAC"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="AC" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonOpenBracket"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="(" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonCloseBracket"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text=")" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonDivide"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="/" />
-
-
-        />
-
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="2dp">
-
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button1"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="1" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button2"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="2" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button3"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="3" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonMultiply"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="*" />
-
-
-        />
-
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="2dp">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button4"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="4" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button5"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="5" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button6"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="6" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonMinus"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="-" />
-
-
-        />
-
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="2dp">
-
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button7"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="7" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button8"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="8" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button9"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="9" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonPlus"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="+" />
-
-
-        />
-
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="2dp">
-
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonC"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="C" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button0"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="0" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonDot"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="." />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonEqual"
-            app:cornerRadius="0dp"
-            android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
-            android:layout_width="30pt"
-            android:layout_height="30pt"
-            android:layout_weight="1"
-            android:text="=" />
-
-
-        />
-
-
-    </TableRow>
-
-
-
-
-
-
-
-</TableLayout>
-
-
+        <include
+            layout="@layout/buttons_layout"/>
 
 
 </LinearLayout>
+
