--- a/app/src/main/res/layout/buttons_layout.xml
+++ b/app/src/main/res/layout/buttons_layout.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_weight="1"
     android:layout_margin="10dp"
@@ -10,38 +12,48 @@
         android:layout_height="match_parent">
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonAC"
+            app:cornerRadius="0dp"
             android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="AC" />
+            android:text="AC"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonOpenBracket"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/beige"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="(" />
+            android:text="("
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonCloseBracket"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/beige"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text=")" />
+            android:text=")"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonDivide"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/orange"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="/" />
+            android:text="/"
+            android:textColor="@color/black"/>
 
 
         />
@@ -54,37 +66,48 @@
         android:layout_height="match_parent">
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button1"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="1" />
+            android:text="1"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button2"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="2" />
+            android:text="2"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button3"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="3" />
+            android:text="3"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonMultiply"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/orange"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="*" />
+            android:text="*"
+            android:textColor="@color/black"/>
 
 
         />
@@ -96,37 +119,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button4"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="4" />
+            android:text="4"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button5"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="5" />
+            android:text="5"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button6"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="6" />
+            android:text="6"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonMinus"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/orange"
+
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="-" />
+            android:text="-"
+            android:textColor="@color/black"/>
 
 
         />
@@ -139,37 +174,48 @@
         android:layout_height="match_parent">
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button7"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="7" />
+            android:text="7"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button8"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="8" />
+            android:text="8"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button9"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="9" />
+            android:text="9"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonPlus"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/orange"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="+" />
+            android:text="+"
+            android:textColor="@color/black"/>
 
 
         />
@@ -182,39 +228,48 @@
         android:layout_height="match_parent">
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonC"
+            app:cornerRadius="0dp"
             android:backgroundTint="@color/red"
-            android:layout_margin="1dp"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="C" />
+            android:text="C"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button0"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="0" />
+            android:text="0"
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonDot"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/beige"
+            android:layout_marginEnd="8dp"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-            android:text="." />
+            android:text="."
+            android:textColor="@color/black"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonEqual"
-            android:layout_margin="1dp"
+            app:cornerRadius="0dp"
+            android:backgroundTint="@color/green"
             android:layout_width="30pt"
             android:layout_height="30pt"
             android:layout_weight="1"
-
-            android:text="=" />
+            android:text="="
+            android:textColor="@color/black"/>
 
 
         />
