--- a/app/src/main/res/layout/text_view.xml
+++ b/app/src/main/res/layout/text_view.xml
@@ -8,7 +8,7 @@
     android:layout_margin="10dp"
     android:gravity="right|center"
     android:layout_weight="4"
-    android:text=""
+    android:text="12345678"
     >
 
 </TextView>
