--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context=".MainActivity">
 
         <include
-            layout="@layout/text_view" />
+            layout="@layout/text_view1" />
 
         <include
             layout="@layout/text_view2" />
