--- a/app/src/main/res/layout/text_view.xml
+++ b/app/src/main/res/layout/text_view.xml
@@ -7,9 +7,8 @@
     android:ems="10"
     android:layout_margin="10dp"
     android:gravity="right|center"
-    android:layout_weight="4"
     android:text="12345678"
-    >
+    android:layout_gravity="center">
 
 </TextView>
 
