--- a/app/src/main/res/layout/text_view2.xml
+++ b/app/src/main/res/layout/text_view2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/editText"
+    android:id="@+id/result"
     android:textSize="40pt"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,7 +8,8 @@
     android:layout_margin="10dp"
     android:gravity="right|center"
     android:layout_weight="1"
-    android:text="0" >
+    android:text="0"
+    android:layout_above="@+id/butL">
 
 </TextView>
 
