--- a/app/src/main/res/layout/buttons_layout.xml
+++ b/app/src/main/res/layout/buttons_layout.xml
@@ -24,7 +24,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="AC"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonOpenBracket"
@@ -35,7 +36,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="("
-            android:textColor="@color/black"/>
+            android:textColor="@color/white"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonCloseBracket"
@@ -46,7 +48,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text=")"
-            android:textColor="@color/black"/>
+            android:textColor="@color/white"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonDivide"
@@ -56,7 +59,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="/"
-            android:textColor="@color/black"/>
+            android:textColor="@color/white"
+            android:textSize="10pt"/>
 
 
         />
@@ -78,7 +82,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="1"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button2"
@@ -89,7 +94,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="2"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button3"
@@ -100,7 +106,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="3"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonMultiply"
@@ -110,7 +117,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="*"
-            android:textColor="@color/black"/>
+            android:textColor="@color/white"
+            android:textSize="10pt"/>
 
 
         />
@@ -131,7 +139,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="4"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button5"
@@ -142,7 +151,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="5"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button6"
@@ -153,7 +163,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="6"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonMinus"
@@ -164,7 +175,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="-"
-            android:textColor="@color/black"/>
+            android:textColor="@color/white"
+            android:textSize="10pt"/>
 
 
         />
@@ -186,7 +198,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="7"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button8"
@@ -197,7 +210,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="8"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button9"
@@ -208,7 +222,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="9"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonPlus"
@@ -218,7 +233,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="+"
-            android:textColor="@color/black"/>
+            android:textColor="@color/white"
+            android:textSize="10pt"/>
 
 
         />
@@ -240,7 +256,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="C"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button0"
@@ -251,7 +268,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="0"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonDot"
@@ -262,7 +280,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="."
-            android:textColor="@color/black"/>
+            android:textColor="@color/white"
+            android:textSize="10pt"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonEqual"
@@ -272,7 +291,8 @@
             android:layout_height="30pt"
             android:layout_weight="1"
             android:text="="
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="10pt"/>
 
 
         />
