--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,8 @@
     <color name="black">#424242</color>
     <color name="white">#FFFFFF</color>
     <color name="primary">#F5FEFF</color>
-    <color name="orange">#03A9F4</color>
+    <color name="blue1">#03A9F4</color>
     <color name="blue">#81D4FA</color>
-    <color name="beige">#03A9F4</color>
     <color name="green">#2EE282</color>
     <color name="red">#FFA5A0</color>
 
